# 75.42-PEPAS

./: .gitignore  .project  CMakeLists.txt  README.md  Server.xml  Sockets  cliente.xml  clienteController.cpp  clienteDefault.xml  log.txt  main  main.cpp  makefile  pista.xml  pista2.xml  pista3.xml  server.xml  serverDefault.xml  socketCliente.cpp  socketCliente.h
PEPAS/: .cproject  .project  cliente.xml  clienteDefault.xml  log.txt  makefile
PEPAS/headers/Controller/: logger.h  servidorController.h
PEPAS/headers/Model/: AliveThread.h  Autito.h  Auto.h  CalculateThread.h  CarreraThread.h  ClientesThread.h  EscuchaThread.h  LineaX.h  Logica.h  Mapa.h  Objeto.h  Recorredor.h  ShutdownThread.h  Thread.h  TimerThread.h  World.h  Zoomer.h  baseDeDatos.h  casillero.h  consola.h  logger.h  minimapa.h  objetos.h  pistaParser.h  posicion.h  puntero.h  segmento.h  servidor.h  servidorBuilder.h  socket.h  thread.h  usuario.h
PEPAS/headers/Vista/: ConsolaThread.h  consola.h
PEPAS/headers/com.pepas.controllers/: clienteController.h
PEPAS/headers/com.pepas.logger/: Logger.h
PEPAS/headers/com.pepas.model/: Auto.h  ClienteMonitor.h  Figura.h  Mapa.h  Mensaje.h  Objeto.h  Recorredor.h  Recta.h  Rival.h  Textura.h  aliveSignalThread.h  cliente.h  lock.h  minimapa.h  objetos.h  recvThread.h  sdllib.h  segmento.h  socket.h  threadMinimapa.h  usuario.h
PEPAS/headers/com.pepas.parser/: ClienteParser.h
PEPAS/headers/com.pepas.view/: VistaLogin.h  VistaTransicion.h  consola.h  vista.h
PEPAS/src/: PEPAS.cpp  baseDeDatos.cpp  consola.cpp  consola.h  main.cpp  server.xml  servidor.cpp  servidorBuilder.cpp  servidorController.cpp  servidorController.h  usuario.cpp  usuario.h
PEPAS/src/Controller/: logger.cpp  servidorController.cpp
PEPAS/src/Model/: AliveThread.cpp  Autito.cpp  Auto.cpp  CalculateThread.cpp  CarreraThread.cpp  ClientesThread.cpp  EscuchaThread.cpp  LineaX.cpp  Logica.cpp  Mapa.cpp  Objeto.cpp  Recorredor.cpp  Recta.cpp  ShutdownThread.cpp  Thread.cpp  TimerThread.cpp  World.cpp  Zoomer.cpp  baseDeDatos.cpp  casillero.cpp  consola.cpp  logger.cpp  main.cpp  minimapa.cpp  objetos.cpp  pistaParser.cpp  posicion.cpp  pugixml.cpp  puntero.cpp  segmento.cpp  servidor.cpp  servidorBuilder.cpp  socket.cpp  thread.cpp  usuario.cpp
PEPAS/src/Vista/: ConsolaThread.cpp  ConsolaThread.h  consola.cpp
PEPAS/src/com.pepas.controllers/: clienteController.cpp
PEPAS/src/com.pepas.logger/: Logger.cpp
PEPAS/tests/: baseDeDatosTest.cpp  threadsTests.cpp
(+38 files in other folders)
